--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.14
+      - name: Run go generate
+        run: go generate
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
