--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,5 +13,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.14
+      - name: Run go generate
+        run: go generate
       - name: Run go tests
         run: go test -cover -p 1 -v ./...
