Goreleaser GPG signature

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,16 +6,17 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set up Go
+      - name: Set up Go
         uses: actions/setup-go@v2
         with:
           go-version: 1.14
-      -
-        name: Run GoReleaser
+      - name: Import signing key
+        run: echo "${GPG_KEY}" | base64 -d | gpg --batch --import
+        env:
+          GPG_KEY: ${{ secrets.GPG_KEY }}
+      - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
