--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -26,9 +26,11 @@ nfpms:
     maintainer: Janos Pasztor <handshake@containerssh.io>
     description: The guest agent for ContainerSSH, an SSH server that launches containers on demand.
     license: MIT
+    package_name: containerssh-agent
     builds:
       - containerssh-agent
     formats:
+      - apk
       - deb
       - rpm
     bindir: /usr/bin
