--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,8 +12,29 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.14
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Quay.io
+        uses: docker/login-action@v1
+        with:
+          registry: quay.io
+          username: ${{ secrets.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_PASSWORD }}
+      - name: Build and push (Docker Hub)
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: containerssh/containerssh-guest-image:latest
+      - name: Build and push (Quay.io)
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: quay.io/containerssh/containerssh-guest-image:latest
       - name: Import signing key
-        run: echo "${GPG_KEY}" | base64 -d | gpg --batch --import
+        run: echo "${GPG_KEY}" | base64 -d | gpg --batch --import && mkdir /var/secrets && echo "${GPG_KEY}" | base64 -d >/var/secrets/signing.gpg
         env:
           GPG_KEY: ${{ secrets.GPG_KEY }}
       - name: Run GoReleaser
