--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,8 @@ jobs:
         run: echo "${GPG_KEY}" | base64 -d | gpg --batch --import && echo "${GPG_KEY}" | base64 -d >/tmp/signing.gpg
         env:
           GPG_KEY: ${{ secrets.GPG_KEY }}
+      - name: Install packages
+        run: sudo apt-get install dpkg-sig rpm
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
