Removed output format to fix linting

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,4 +19,4 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           version: v1.32.2
-          args: --out-format=colored-line-number -E asciicheck -E bodyclose -E dupl -E errorlint -E exportloopref -E funlen
+          args: -E asciicheck -E bodyclose -E dupl -E errorlint -E exportloopref -E funlen
