--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,5 +15,7 @@ jobs:
           go-version: 1.16
       - name: Run go generate
         run: go generate
+      - name: Build
+        run: go build
       - name: Run go tests
         run: go test -cover -p 1 -v ./...
