--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,13 +12,13 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.19
+          go-version: 1.23
       - name: Run go generate
         run: go generate
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.53
-          args: -E asciicheck -E bodyclose -E dupl -E errorlint -E exportloopref -E funlen
+          version: v1.62
+          args: -E asciicheck -E bodyclose -E dupl -E errorlint -E copyloopvar -E funlen
           skip-pkg-cache: true
           skip-build-cache: true
